name:          hipworktime
version:       0.1
license:       BSD3
cabal-version: >= 1.10
license-file:  LICENSE
author:        Takashi Kawachi
maintainer:    Takashi Kawachi <tkawachi@gmail.com>
stability:     experimental
homepage:      http://github.com/tkawachi/hipworktime/
bug-reports:   http://github.com/tkawachi/hipworktime/issues
copyright:     Copyright (C) 2013 Takashi Kawachi
synopsis:      hipworktime
description:   hipworktime
build-type:    Custom

extra-source-files:
  .ghci
  .gitignore
  .travis.yml
  .vim.custom
  README.md

source-repository head
  type: git
  location: https://github.com/tkawachi/hipworktime.git

library
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  build-depends:
      base >= 4.4 && < 5,
      HTTP == 4000.2.10

executable hipworktime
  hs-source-dirs: src
  default-language: Haskell2010
  ghc-options: -Wall
  main-is: Main.hs
  build-depends:
      base >= 4.4 && < 5,
      HTTP == 4000.2.10,
      time >= 1.4 && < 1.5,
      filepath,
      directory

test-suite doctests
  type:    exitcode-stdio-1.0
  main-is: doctests.hs
  default-language: Haskell2010
  build-depends:
      base
    , directory >= 1.0
    , doctest >= 0.9.1
    , filepath
  ghc-options: -Wall -threaded
  if impl(ghc<7.6.1)
    ghc-options: -Werror
  hs-source-dirs: tests
